🔧 chore: Jest, Babel 기본 환경 설정 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,18 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "jsx": "react-jsx",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
-    "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "types": ["@testing-library/jest-dom"],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
