🔧 chore: Jest 테스트 환경을 위한 tsconfig.test.json 생성 및 테스트 명령어 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --config jest.config.ts",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "14.2.20",
