--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "14.2.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
