--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "autoprefixer": "^10.4.20",
+    "js-cookie": "^3.0.5",
     "next": "14.2.20",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -27,8 +30,9 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.14",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
     "eslint": "^8",
