--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "autoprefixer": "^10.4.20",
+    "firebase": "^11.0.2",
     "js-cookie": "^3.0.5",
     "next": "14.2.20",
     "react": "^18.3.1",
