--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -32,7 +33,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.17.9",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
