--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "autoprefixer": "^10.4.20",
     "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.20",
     "react": "^18.3.1",
